# fty-service-status-

./: .gitignore  CMakeLists.txt  Jenkinsfile  README.md  doxygen.conf
cmake/: package-config.cmake.in  package.pc.cmake.in
example/: CMakeLists.txt
example/include/: example.h
example/src/: example.cpp
include/: fty_service_status.h
packaging/debian/: changelog  control  copyright  rules
packaging/obs/: pkgname.obs
test/: CMakeLists.txt
test/src/: test.cpp
